--- a/app/src/main/res/layout/activity_video01.xml
+++ b/app/src/main/res/layout/activity_video01.xml
@@ -21,6 +21,7 @@
         android:background="#000000" />
 
     <TextView
+        android:id="@+id/fichero"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="fichero de video"
@@ -32,7 +33,7 @@
         android:layout_height="1sp"
         android:background="#000000" />
 
-    <VideoView
+    <SurfaceView
         android:id="@+id/video"
         android:layout_width="640px"
         android:layout_height="520px"
@@ -78,6 +79,7 @@
         android:textColor="#fc0505"/>
 
     <Spinner
+        android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
